# bookish-carnival

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  db_init.py  docker-compose.yml  download_data.py  multi-agent-chatbot.ipynb  pyproject.toml  text2sql_agent.py
